# revolt-dm-only

./: README.md  io.github.lo2dev.revoltDmOnly.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-io.github.lo2dev.revoltDmOnly.json/: init
.flatpak-builder/checksums/: x86_64-io.github.lo2dev.revoltDmOnly.json
.flatpak-builder/git/file_home_gauss_Projects_revolt-dm-only/: config
data/: io.github.lo2dev.revoltDmOnly.desktop.in  io.github.lo2dev.revoltDmOnly.gschema.xml  io.github.lo2dev.revoltDmOnly.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: api.vala  application.vala  chat-page.blp  chat-page.ui  chat-page.vala  main.vala  meson.build  revolt-dm-only.gresource.xml  websocket.vala  window.blp  window.ui  window.vala
